# Context_RAG_Chatbot

./: .gitignore  README.md  custom_postgres_rag.py  pyproject.toml  start_phoenix.py
config/: ollama_models.yaml
data/processed/: doc_0f5177c21638.json  doc_61c459abc65a.json  doc_87816f43fad1.json  doc_ba8b4b15f257.json  doc_e3223739a713.json  doc_fa2ecaed91c2.json
scripts/: debug_docling.py  setup_crewai_system.py  setup_database.py  setup_docling.py  setup_rag_system.py  test_agents_fix.py
src/contextual_rag/agents/: crew_orchestrator.py  evaluator_agent.py  generator_agent.py  master_agent.py  ollama_manager.py  reranker_agent.py  retriever_agent.py
src/contextual_rag/agents/tools/: __init__.py  evaluation_tool.py  llm_generation_tool.py  reranking_tool.py  reranking_tool2.py  vector_search_tool.py
src/contextual_rag/document_processing/: docling_processor.py
src/contextual_rag/evaluation/: __init__.py  ragas_evaluator.py
src/contextual_rag/evaluation/testing/: __init__.py  ground_truth_dataset.json  ground_truth_generator.py  test_questions.py
src/contextual_rag/rag/: vector_store.py
src/contextual_rag/ui/: __init__.py  web_app.py
src/contextual_rag/ui/static/css/: style.css
src/contextual_rag/ui/static/js/: app.js  app2.js
src/contextual_rag/ui/static/templates/: index.html  index2.html
tests/: test_docling_processor.py  test_ollama_llm.py  test_vector_store.py
